--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=10s
 
+server.tomcat.remoteip.remote-ip-header=x-forwarded-for
+
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/service_accounts/v1/jwk/securetoken%40system.gserviceaccount.com
 cors.origin=*
