enable prometheus metrics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ server.tomcat.remoteip.remote-ip-header=x-forwarded-for
 
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/service_accounts/v1/jwk/securetoken%40system.gserviceaccount.com
 cors.origin=*
+
+management.endpoints.web.exposure.include=health,prometheus
+management.endpoint.metrics.enabled=true
